# ReCoDE_MCMCFF

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  environment.yml  environment_from_history.yml  environment_full.yml  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg
.github/workflows/: docs.yml
code/: setup.cfg
code/docs/: conf.py  index.rst  requirements.txt
code/docs/_static/: custom.css
code/docs/learning/: 02 Packaging It Up.ipynb  04 Testing.ipynb  07 Producing Research Outputs.ipynb
code/docs/learning/assets/: matplotlibrc.json
code/src/MCFF/: ising_model.py  mcmc.py
code/tests/: test_energy.py  test_energy_using_hypothesis.py
docs/: api_docs.rst  conf.py  index.rst  quickstart.rst
docs/learning/: 01 Introduction.ipynb  02 Packaging It Up.ipynb  03 Writing a Markov Chain Monte Carlo Sampler.ipynb  04 Testing.ipynb  05 Adding Functionality.ipynb  06 Speeding It Up.ipynb  07 Producing Research Outputs.ipynb  08 Doing Reproducible Science.ipynb  09 Adding Documentation.ipynb
docs/learning/walkers_plot/: data.pickle  generate_montecarlo_walkers.py  plot_montecarlo_walkers.py
learning/: 01 Introduction.ipynb  02 Expanding our codebase.ipynb  02 Packaging it up.ipynb  03 Packaging it up.ipynb  03 Testing.ipynb  03 Writing a Markov Chain Monte Carlo sampler.ipynb  04 Testing.ipynb  05 Adding functionality.ipynb  06 Speeding it up.ipynb  07 Producing research outputs.ipynb  08 Doing reproducible science.ipynb  09 API documentation.ipynb
learning/assets/: matplotlibrc.json
tests/: test_energy.py  test_energy_using_hypothesis.py
