[metadata]
name = MCFF
version = 0.0.1
author = Tom Hodson
author_email = tch14@ic.ac.uk
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomHodson/MCMC_for_fun_and_profit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The 3-Clause BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    numba

[options.extras_require]
dev =
    pytest == 7.1
    pytest-cov == 3.0
    pre-commit == 2.20
    hypothesis == 6.29
    jupyterlab == 3.4.3
docs =
    ipykernel == 6.9.0
    sphinx >= 4.0.0
    myst-nb

[options.packages.find]
where = src
