[metadata]
name = MCFF
version = 0.0.1
author = Tom Hodson
author_email = tch14@ic.ac.uk
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomHodson/MCMC_for_fun_and_profit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The 3-Clause BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
  numpy == 1.21
  scipy == 1.7
  matplotlib == 3.5
  numba == 0.55
  ipykernel == 6.9   # Allows this conda environment to show up automatically in Jupyter Lab
  watermark == 2.3    # Generates a summary of package version for use inside Jupyter Notebooks

[options.packages.find]
where = src
dev =
  pytest == 7.1      # Testing
  pytest-cov == 3.0  # For Coverage testing
  hypothesis == 6.29  # Property based testing
  pre-commit == 2.20

docs =
  sphinx == 5.0       # For building the documentation
  myst-nb == 0.16
